$Id: History,v 1.35 2001-08-14 18:24:54 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

14th August 2001  John Allison  (greps-V03-02-02)
- Coworks with vis-V03-02-11 and intercoms-V03-02-03.
- Added G4Polyline::transform.
- Fixed pedantic warnings in G4NURBS.

24th July May 2001  John Allison  (greps-V03-02-01)
- Improvements to comments and layout in G4VisExtent.
- Cosmetic improvements to G4Scale, small change of interface.

21st July May 2001  John Allison  (greps-V03-02-00)
- Added G4Scale.

25th May 2001  John Allison  (greps-V03-01-02)
- Added GetSurfaceArea() and GetVolume() to HepPolyhedron (Evgeni).
- Bug fix in BooleanProcessor.src (Guy, Evgeni).

3rd May 2001  John Allison  (greps-V03-01-01)
- Replaced G4RWTValOrderedVector by G4std::vector in G4PlacedPolyhedron
  and G4Point3DList.  Forces co-working tags in categories:
    geommng-V03-01-02
    tracking-V03-01-00
    vis-V03-01-01

11th April 2001  John Allison  (greps-V03-01-00)
- Some code has been added to cover unforeseen earlier situation
  during preselection of faces without intersection (Evgeni).
- Moved #include <CLHEP/config/TemplateFunctions.h> and others from
  HepPolyhedron.h to HepPolyhedron.cc (Evgeni).