@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4Point3DList.hh,v 1.9 2001-08-14 18:24:56 johna Exp $
+// $Id: G4Point3DList.hh,v 1.10 2001-08-20 23:28:42 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -39,12 +39,12 @@
 #include "g4std/iostream"
 
 class G4Point3DList: public G4std::vector<G4Point3D> {
-
-typedef G4std::vector<G4Point3D>::iterator iterator;
-
-friend G4std::ostream& operator << (G4std::ostream& os, const G4Point3DList& points);
-
+  
+  friend G4std::ostream& operator << (G4std::ostream& os, const G4Point3DList& points);
+  
 public:
+
+  typedef G4std::vector<G4Point3D>::iterator iterator;
 
   virtual ~G4Point3DList();
 
