@@ -1,4 +1,4 @@
-$Id: History,v 1.35 2001-08-14 18:24:54 johna Exp $
+$Id: History,v 1.36 2001-08-20 23:28:36 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+20th August 2001  John Allison  (greps-V03-02-03)
+- Made typedef's public in G4Point3DList.hh and G4Polyline.hh.
 
 14th August 2001  John Allison  (greps-V03-02-02)
 - Coworks with vis-V03-02-11 and intercoms-V03-02-03.
